--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "latest",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "typescript": "^5",
