--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "latest",
+    "@types/pg": "^8.11.0",
     "dotenv": "^16.4.5",
     "next": "14.1.0",
     "pg": "^8.11.3",
