--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "latest",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/next-auth": "^3.15.0",
     "@types/pg": "^8.11.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18",
-    "swr": "^2.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "typescript": "^5",
